--- a/apps/react-demo/index.html
+++ b/apps/react-demo/index.html
@@ -8,7 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/src/styles.css" />
+    <link
+      href="https://static.fiks.ks.no/googlefonts/googleapis/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
