--- a/packages/angular/.storybook/preview-head.html
+++ b/packages/angular/.storybook/preview-head.html
@@ -1,6 +1,7 @@
 <link href="https://static.fiks.ks.no/googlefonts/googleapis/css2?family=Inter:wght@400;500;600;700;800&display=swap"
   rel="stylesheet" />
 
+<link rel="stylesheet" href="css/base.css" />
 
 <script>
   document.documentElement.setAttribute('lang', 'no');
