chore(angular): storybook css to preview-head.html

--- a/packages/angular/.storybook/preview-head.html
+++ b/packages/angular/.storybook/preview-head.html
@@ -3,6 +3,12 @@
 
 <link rel="stylesheet" href="css/base.css" />
 
+<style>
+  * {
+    font-feature-settings: 'cv05' 1;
+  }
+</style>
+
 <script>
   document.documentElement.setAttribute('lang', 'no');
 </script>
